--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,7 @@ spring.datasource.platform = mysql
 
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql = true
+
+spring.datasource.schema=schema.sql
+spring.datasource.data=data.sql
+spring.sql.init.mode=always
